--- a/LEDConfig/LEDConfig.csproj
+++ b/LEDConfig/LEDConfig.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,9 +45,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arduino\ArduinoNano.cs" />
+    <Compile Include="Arduino\ArduinoNanoFactory.cs" />
+    <Compile Include="Arduino\FirmwareCommand.cs" />
     <Compile Include="LEDs\LEDColor.cs" />
     <Compile Include="LEDs\LEDStrip.cs" />
+    <Compile Include="LogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="LEDConfig.log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
