added test class for logging

--- a/LEDConfig/LEDConfig.csproj
+++ b/LEDConfig/LEDConfig.csproj
@@ -53,9 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="LEDConfig.log4net.config">
+    <Content Include="LEDConfig.log4net.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
