--- a/LEDConfig/LEDConfig.csproj
+++ b/LEDConfig/LEDConfig.csproj
@@ -36,6 +36,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,7 +47,9 @@
   <ItemGroup>
     <Compile Include="Arduino\ArduinoNano.cs" />
     <Compile Include="Arduino\ArduinoNanoFactory.cs" />
+    <Compile Include="Arduino\Enums.cs" />
     <Compile Include="Arduino\FirmwareCommand.cs" />
+    <Compile Include="Arduino\FirmwareSettings.cs" />
     <Compile Include="LEDs\LEDColor.cs" />
     <Compile Include="LEDs\LEDStrip.cs" />
     <Compile Include="LogManager.cs" />
