implemented ability to read and commit settings to/from device

--- a/LEDConfigTests/LEDConfigTests.csproj
+++ b/LEDConfigTests/LEDConfigTests.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandStringTests.cs" />
     <Compile Include="ConnectionTests.cs" />
     <Compile Include="LogTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
